--- a/src/main/resources/templates/current_voltage_chart.html
+++ b/src/main/resources/templates/current_voltage_chart.html
@@ -1,120 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-<meta charset="utf-8" />
-<title>Bootstrap, from Twitter</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
-<meta name="author" content="" />
+	<meta charset="utf-8" />
+	<title>中压配网智能监控系统 - 上海东君电气有限公司</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Le styles
-<link href="../../css/bootstrap.css" rel="stylesheet" /> 
-<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css"
-	rel="stylesheet" />
--->
+	<link href="../../css/bootstrap.css" rel="stylesheet" />
+	<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="../../css/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen" />
+	<link href="../../css/chart.css" rel="stylesheet" />
+	<link href="../../css/global.css" rel="stylesheet" />
 
-<link href="../../css/bootstrap.css" rel="stylesheet" />
-<style type="text/css">
-body {
-	padding-top: 60px;
-	padding-bottom: 40px;
-}
+	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+	<!--[if lt IE 9]>
+    <script src="../../js/html5shiv.js"></script>
+  <![endif]-->
 
-.thumbnail {
-	padding: 10px;
-	overflow: auto;
-}
-
-.outer_chart {
-	
-}
-
-@media ( max-width : 980px) {
-	/* Enable use of floated navbar text */
-	.navbar-text.pull-right {
-		float: none;
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-}
-
-.a_phase {
-	width: 10px;
-	height: 10px;
-	background-color: #7EBBF9;
-	display: block;
-}
-
-.b_phase {
-	width: 10px;
-	height: 10px;
-	background-color: #2975B5;
-	display: block;
-}
-
-.c_phase {
-	width: 10px;
-	height: 10px;
-	background-color: #A572AA;
-	display: block;
-}
-</style>
-<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="../../css/datetimepicker/bootstrap-datetimepicker.min.css"
-	rel="stylesheet" media="screen" />
-
-
-<!-- dataTables -->
-
-
-
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="../../js/html5shiv.js"></script>
-    <![endif]-->
-
-<!-- Fav and touch icons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144"
-	href="../../ico/apple-touch-icon-144-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114"
-	href="../../ico/apple-touch-icon-114-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72"
-	href="../../ico/apple-touch-icon-72-precomposed.png" />
-<link rel="apple-touch-icon-precomposed"
-	href="../../ico/apple-touch-icon-57-precomposed.png" />
-<link rel="shortcut icon" href="../../ico/favicon.png" />
+	<!-- Fav and touch icons -->
+	<link rel="shortcut icon" href="../../ico/favicon.png" />
+	<link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 </head>
 
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container-fluid">
-				<button type="button" class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="brand" href="#">东君电气</a>
-				<div class="nav-collapse collapse">
-					<p class="navbar-text pull-right">
-						登录 <a href="greeting" class="navbar-link" th:text="${name}"></a>
-					</p>
-					<ul class="nav">
-						<li><a href="index">首页</a></li>
-						<li><a href="manager">管理</a></li>
-						<li class="active"><a href="current_voltage_chart">报表</a></li>
-						<li><a href="#about">关于</a></li>
-						<li><a href="#contact">联系我们</a></li>
-					</ul>
+	<div class="container-fluid">
+		<div class="hero-unit">
+			<div class="row-fluid">
+				<div class="span4">
+					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
 				</div>
-				<!--/.nav-collapse -->
+				<div class="span8">
+					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
+					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
+					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="container-fluid">
 		<div class="control-group form-horizontal row-fluid">
 			<div class="controls span4">
 				<label class="control-label">请选择变电站：</label> <select
@@ -125,6 +51,7 @@ body {
 					class='span6'></select>
 			</div>
 		</div>
+
 		<div class="control-group form-horizontal row-fluid">
 			<div class="controls span4">
 				<label class="control-label">请选择设备类型:</label> <select
@@ -138,9 +65,8 @@ body {
 				<label class="control-label">请选择设备：</label> <select id='switchs'
 					class='span6'></select>
 			</div>
-
-
 		</div>
+
 		<div class="control-group offset9">
 			<div class="controls input-append date form_date" data-date=""
 				data-date-format="yyyy-mm-dd" data-link-field="dtp_input2"
@@ -150,7 +76,6 @@ body {
 					class="icon-th"></i></span>
 				<button id="search_btn" class="btn">搜索</button>
 			</div>
-
 		</div>
 
 
@@ -175,8 +100,8 @@ body {
 					<li>C相</li>
 				</ul>
 			</div>
-
 		</div>
+
 		<div class="span11 row-fluid">
 			<span class="span2 offset5"><h3>电流曲线图</h3> </span>
 			<div class="thumbnail span10">
@@ -198,8 +123,8 @@ body {
 					<li>C相</li>
 				</ul>
 			</div>
-
 		</div>
+
 		<div class="span11 row-fluid">
 			<span class="span2 offset5"><h3>功率曲线图</h3> </span>
 			<div class="thumbnail span10">
@@ -221,20 +146,17 @@ body {
 					<li>C相</li>
 				</ul>
 			</div>
-
 		</div>
+
 		<footer>
 			<p>&copy; Company 2013</p>
 		</footer>
+
 	</div>
 
 	<!--/.fluid-container-->
 
-	<!-- Le javascript
-    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster 
-	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.js"></script>
-	-->
+	<!-- Le javascript ================================================== -->
 	<script src="../../js/jquery.js"></script>
 	<script src="../../js/bootstrap-transition.js"></script>
 	<script src="../../js/bootstrap-alert.js"></script>
@@ -253,20 +175,14 @@ body {
 	<script src="../../js/chart/Chart.js"></script>
 
 	<!-- datetimepicker -->
-	<script type="text/javascript"
-		src="../../js/datetimepicker/bootstrap-datetimepicker.js"></script>
-	<script type="text/javascript"
-		src="../js/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"
-		charset="UTF-8"></script>
+	<script src="../../js/datetimepicker/bootstrap-datetimepicker.js"></script>
+	<script src="../js/datetimepicker/locales/bootstrap-datetimepicker.zh-CN.js"></script>
 
 	<!-- custom -->
 	<script src="../../js/custom/Date.js"></script>
 	<script src="../../js/custom/substation_line_set.js"></script>
 	<script src="../../js/custom/line_switch_set.js"></script>
 	<script src="../../js/custom/current_voltage_chart.js"></script>
-
-
-
 
 </body>
 </html>
