--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,127 +1,68 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-<meta charset="utf-8" />
-<title>Bootstrap, from Twitter</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
-<meta name="author" content="" />
+  <meta charset="utf-8" />
+  <title>电网智能监控系统 - 上海东君电气有限公司</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Le styles -->
+  <link href="../../css/bootstrap.css" rel="stylesheet" />
+  <link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
+  <link href="../../css/ZTree/zTreeStyle.css" rel="stylesheet" />
+  <link href="../../css/index.css" rel="stylesheet" />
+  <link href="../../css/global.css" rel="stylesheet" />
 
-<!-- Le styles -->
-<link href="../../css/bootstrap.css" rel="stylesheet" />
-<style type="text/css">
-body {
-	height: 100%;
-	margin: 0px;
-	padding: 0px
-}
 
-.sidebar-nav {
-	padding: 9px 0;
-	height: 512px;
-}
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+    <script src="../../js/html5shiv.js"></script>
+  <![endif]-->
 
-.row-fluid {
-	margin-top: 50px;
-}
-
-@media ( max-width : 980px) {
-	/* Enable use of floated navbar text */
-	.navbar-text.pull-right {
-		float: none;
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-}
-
-#baidu_map {
-	height: 560px;
-}
-</style>
-<link href="../../css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="../../css/ZTree/zTreeStyle.css" rel="stylesheet" />
-
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="../../js/html5shiv.js"></script>
-    <![endif]-->
-
-<!-- Fav and touch icons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144"
-	href="../../ico/apple-touch-icon-144-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114"
-	href="../../ico/apple-touch-icon-114-precomposed.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72"
-	href="../../ico/apple-touch-icon-72-precomposed.png" />
-<link rel="apple-touch-icon-precomposed"
-	href="../../ico/apple-touch-icon-57-precomposed.png" />
-<link rel="shortcut icon" href="../../ico/favicon.png" />
-
+  <!-- Fav and touch icons -->
+  <link rel="shortcut icon" href="../../ico/favicon.png" />
+  <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 </head>
-
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container-fluid">
-				<button type="button" class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="brand" href="#">东君电气</a>
-				<div class="nav-collapse collapse">
-					<p class="navbar-text pull-right">
-						登录 <a href="greeting" class="navbar-link" th:text="${name}"></a>
-					</p>
-					<ul class="nav">
-						<li class="active"><a href="index">首页</a></li>
-						<li><a href="low_voltage_switch_manager">管理</a></li>
-						<li><a href="current_voltage_chart">报表</a></li>
-						<li><a href="#about">关于</a></li>
-						<li><a href="#contact">联系我们</a></li>
-					</ul>
+	<div class="container-fluid">
+		<div class="hero-unit">
+			<div class="row-fluid">
+				<div class="span4">
+					<h2><img src="../../img/logo.png" style="height: 60px" />电网智能监控系统</h2>
 				</div>
-				<!--/.nav-collapse -->
+				<div class="span8">
+					<a href="index" class="btn banner-btn btn-primary"><i class="fa fa-map-marker"></i>监控</a>
+					<a href="low_voltage_switch_manager" class="btn banner-btn btn-primary"><i class="fa fa-cog"></i>管理</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-area-chart"></i>报表</a>
+					<a href="current_voltage_chart" class="btn banner-btn btn-primary"><i class="fa fa-user"></i>系统</a>
+					<a href="#about" class="btn banner-btn btn-primary"><i class="fa fa-info-circle"></i>关于</a>
+					<a href="#contact" class="btn banner-btn btn-primary"><i class="fa fa-phone"></i>联系</a>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="container-fluid">
 		<div class="row-fluid">
-			<div class="span3">
+			<div class="span2">
 				<div class="input-append">
-					<label>请选择设备类型:</label> <select id='zTree_node_type' class='span4'>
+					<select id='zTree_node_type' class='span4'>
 						<option value='0'>低压设备</option>
 						<option value='1'>高压设备</option>
 						<option value='2'>无功无场设备</option>
-					</select> <input id="search_node_key" class="span6" type="text"
-						placeholder="请输入..." />
+					</select>
+					<input id="search_node_key" class="span5" type="text" placeholder="请输入..." />
 					<button id="searchNode" class="btn" type="button">搜索</button>
-
-
-
 				</div>
 				<div class="well sidebar-nav ">
 					<ul id="treeDemo" class="ztree"></ul>
 				</div>
 			</div>
-			<!--/row-->
-			<div class="span9" id="baidu_map"></div>
-			<hr />
-
-			<footer>
-				<p>&copy; Company 2013</p>
-			</footer>
+			<div class="span10" id="baidu_map"></div>
 		</div>
-
+		<footer>
+			<p>&copy; Company 2013</p>
+		</footer>
 	</div>
-	<!--/.fluid-container-->
 
-	<!-- Le javascript
-    ================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="../../js/jquery.js"></script>
 	<script src="../../js/bootstrap-transition.js"></script>
 	<script src="../../js/bootstrap-alert.js"></script>
@@ -136,12 +77,9 @@ body {
 	<script src="../../js/bootstrap-carousel.js"></script>
 	<script src="../../js/bootstrap-typeahead.js"></script>
 
-	<!-- 树状图 和 百度地图
-    ================================================== -->
-	<script type="text/javascript"
-		src="../../js/ZTree/jquery.ztree.core-3.5.js"></script>
-	<script type="text/javascript"
-		src="http://api.map.baidu.com/api?v=1.5&amp;ak=KdwNinCQXF9C7Cu8GOWK0nuM"></script>
+	<!-- 树状图 和 百度地图 -->
+	<script src="../../js/ZTree/jquery.ztree.core-3.5.js"></script>
+	<script src="http://api.map.baidu.com/api?v=1.5&amp;ak=KdwNinCQXF9C7Cu8GOWK0nuM"></script>
 	<script src="../../js/custom/index.js"></script>
 	<script src="../../js/custom/switch_detail.js"></script>
 
